<resources>
    <string name="app_name">SplitTheBill</string>
    <string name="close">Fechar</string>
    <string name="calculate">Calculate</string>
    <string name="add_person">Add Person</string>
    <string name="name">Nome</string>
    <string name="paid_value">Valor pago</string>
    <string name="_0_00">0.00</string>
    <string name="desc">Descrição</string>
    <string name="save">salvar</string>
    <string name="paid_price">Preço Pago</string>
    <string name="price_to_pay">Preço para pagar</string>
    <string name="price_to_receive">Preço para receber</string>
    <string name="remove">Remover</string>
    <string name="edit">Editar</string>
    <string name="valid_inputs_person_activity">Certifique que o nome e o valor foi inserido</string>
    <string name="dot_00">%1$s.00</string>
    <string name="name_view_person">Nome: %1$s</string>
    <string name="paid_value_view_person">Valor Pago: R$ %1$s</string>
    <string name="desc_view_person">Descrição: %1$s</string>
</resources>