<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/nameTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/paidPriceTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/paid_price" />

    <TextView
        android:id="@+id/priceToPayTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_to_pay" />

    <TextView
        android:id="@+id/priceToReceiveTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_to_receive" />

</LinearLayout>